@@ -62,3 +62,4 @@ ntuple_uids = namedtuple('user', 'real effective saved')
 ntuple_gids = namedtuple('group', 'real effective saved')
 ntuple_io = namedtuple('io', 'read_count write_count read_bytes write_bytes')
 ntuple_ionice = namedtuple('ionice', 'ioclass value')
+ntuple_netiostat = namedtuple('iostat', 'interface bytes_sent bytes_rcvd packets_sent packets_rcvd')
